--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -80,6 +80,10 @@ h1 .personPageFormPlaceholder {
 	cursor: pointer;
 }
 
+.collapsingOverflow {
+	overflow: hidden;	
+}
+
 table.personOtherPublicationTable {
 	table-layout: fixed;
 }
