--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/groupSettings.jspx
@@ -29,8 +29,10 @@
 			<script type="text/javascript" src="${resdir}/javascript/profile/handlers.js"><!-- --></script>
 			<script type="text/javascript" src="${resdir}/javascript/settings.js"><!-- keep me --></script>
 			
-			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.min.js"><!-- keep me --></script>
-			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.min.css" />
+			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.js"><!-- keep me --></script>
+			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.css" />
+			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table-locale-all.js"><!-- keep me --></script>
+			
 			
 			<!--TODO: move to CSS file -->
 			<style type="text/css">
