--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -92,8 +92,10 @@
 			
 			<script type='text/javascript' src='/resources/javascript/person/personPage.js'><!-- keep me --></script>
 			
-			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.min.js"><!-- keep me --></script>
-			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.min.css" />
+			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table.js"><!-- keep me --></script>
+			<link rel="stylesheet" type="text/css" href="${resdir}/css/bootstrap-table.css" />
+			<script type="text/javascript" src="${resdir}/javascript/bs/bootstrap-table-locale-all.js"><!-- keep me --></script>
+			
 			
 			<link rel="stylesheet" type="text/css" href='/resources/typeahead.js/css/typeahead.css'/>
 		</jsp:attribute>
