person page - added AJAX update main name

--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -176,6 +176,10 @@ a.personPageShowAdditionalRoleFields {
 	top: -13px;
 }
 
+.personPageAlternativeName {
+	cursor: pointer;
+}
+
 /* bootstrap table overrides */
 .personPageTable .bootstrap-table .fixed-table-container {border: none;} 
 .personPageTable .bootstrap-table .fixed-table-container .table-no-bordered th {border: none;} 
