--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/person/show.jspx
@@ -46,6 +46,9 @@
 	<fmt:message key="person.show.modalDeleteNameHeader" var="textModalDeleteNameHeader" />
 	<fmt:message key="person.show.modalDeleteRoleHeader" var="textModalDeleteRoleHeader" />
 	<fmt:message key="person.show.modalDeleteNameContent" var="textModalDeleteNameContent" />
+	
+	
+	
 	<fmt:message key="person.show.modalDeleteRoleContent" var="textModalDeleteRoleContent" />
 	<fmt:message key="person.show.modalEditRoleHeader" var="textModalEditRoleHeader" />
 	<fmt:message key="person.show.modalLinkPersonHeader" var="textModalLinkPersonHeader" />
@@ -359,7 +362,12 @@
 											<ul id="personPageAlternativeNameList" class="list-unstyled">
 												<c:forEach var='name' items="${command.person.names}">
 													<c:if test="${!name.main}">
-														<li id="personPageAlternativeNameID_${name.personNameChangeId}">${name.firstName} ${name.lastName} 
+														<li id="personPageAlternativeNameID_${name.personNameChangeId}">
+															<span data-person-name-id='${name.personNameChangeId}' data-firstName='${name.firstName}' 
+																  data-lastName='${name.lastName}' data-toggle='modal' data-target='#setMainName' 
+																  id='personPageAlternativeNameID_${name.personNameChangeId}' class='personPageAlternativeName'>
+																	${name.firstName} ${name.lastName} 
+															</span>
 															<span data-person-name-id='${name.personNameChangeId}' data-firstName='${name.firstName}' 
 																  data-lastName='${name.lastName}' data-toggle='modal' data-target='#removeName' 
 																  id='removeName_${name.personNameChangeId}' class='removeName fa fa-remove'>
@@ -602,6 +610,32 @@
 							<button type="button" class="btn btn-default" data-dismiss="modal">${textClose}</button>
 							<input type='hidden' name='formPersonNameId' id='formPersonNameId' value=''/>&#160;
 							<button type="button" class="btn btn-primary" id='btnRemoveNameSubmit'>${textDeleteNameButton}</button>
+						</form>
+					</div>
+			</div>
+		</div>
+	</div>
+	
+	<!-- Set main name modal dialog -->
+	<div class="modal fade" id="setMainName" tabindex="-1" role="dialog">
+		<div class="modal-dialog">
+			<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"
+							aria-hidden="true">&amp;times;</button>
+						<h4 class="modal-title"><fmt:message key="person.show.modalSetMainNameHeader" /></h4>
+					</div>
+					
+					<div class="modal-body">
+						<p><fmt:message key="person.show.modalSetMainNameContent" />&amp;nbsp; <strong id='modalMainNameText'>&#160;</strong></p>
+					</div>
+					<div class="modal-footer">
+						<form action="" method="post" class='form-inline' id='setMainNameForm'>
+							<input type="hidden" name="ckey" value="${ckey}"/>
+							<input type='hidden' name='person.personId' value='${command.person.personId}' />
+							<button type="button" class="btn btn-default" data-dismiss="modal">${textClose}</button>
+							<input type='hidden' name='formSelectedName' id='formSelectedName' value=''/>&#160;
+							<button type="button" class="btn btn-primary" id='btnSetMainNameSubmit'><fmt:message key="person.show.saveButton" /></button>
 						</form>
 					</div>
 			</div>
