--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -180,6 +180,10 @@ a.personPageShowAdditionalRoleFields {
 	cursor: pointer;
 }
 
+.personPageAlternativeName:hover {
+	text-decoration: underline;
+}
+
 /* bootstrap table overrides */
 .personPageTable .bootstrap-table .fixed-table-container {border: none;} 
 .personPageTable .bootstrap-table .fixed-table-container .table-no-bordered th {border: none;} 
