Disambiguation Page   translations, design, controller updates new simplePub tag file to visualize publications (title, author)

--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -30,6 +30,15 @@
 	}	
 }	
 
+.simplePub {
+	border-top: @border-dropdown;
+	div:nth-child(even) {
+		background-color: @gray-lighter;
+		border-top: @border-dropdown;
+		border-bottom: @border-dropdown;
+	}
+}
+
 #personPageAjaxError {
 	display:none;
 }
