renamed BIBTEXPAGE to PUBLICATIONPAGE renamed BIBTEXDETAILS to PUBLICATIONDETAILS

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/publicationdetails.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/publicationdetails.jspx
@@ -150,7 +150,7 @@
 		</jsp:attribute>
 
 		<jsp:attribute name="content">
-			<resource:bibtexdetailsclean post="${post}" referer="${command.referer}" />
+			<resource:publicationdetailsclean post="${post}" referer="${command.referer}" />
 		</jsp:attribute>
 		
 		<jsp:attribute name="customPageOptions">
