--- a/bibsonomy-webapp/src/main/webapp/resources/css/history.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/history.less
@@ -3,3 +3,15 @@ dl.dl-history dt {
 		float: left;
 	}
 }
+
+#backToPostBtn {
+	vertical-align:bottom;
+	padding:4px;
+	float: right;
+}
+
+#historyBorder {
+	border-bottom: 1px #cbcbcb solid;
+	clear:right;
+	padding-top:10px;
+}
