--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -193,7 +193,60 @@ a.personPageShowAdditionalRoleFields {
 	text-decoration: underline;
 }
 
-/* bootstrap table overrides */
-.personPageTable .bootstrap-table .fixed-table-container {border: none;} 
-.personPageTable .bootstrap-table .fixed-table-container .table-no-bordered th {border: none;} 
-.personPageTable .bootstrap-table .fixed-table-container .table-no-bordered td {border: none;} 
+
+
+.simplePubEntry:nth-child(2n)  {
+	background-color: #f9f9f9;
+}
+
+.simplePubEntry {
+	padding: 2px 0;
+}
+
+.simplePubFirstLine {
+	width: 100%;
+}
+
+.simplePubTitle {
+	font-weight: bold;
+	display: inline-block;
+	position: relative;
+}
+
+.simplePubTitle a {
+	display: inline-block;
+	padding: 0 56px 0 0;
+}
+
+.simplePubYear {
+	float: left;
+	width: 50px;
+	display: inline-block;
+	padding: 0;
+	position: absolute;
+	top: 0;
+	right: 0;
+	font-weight: normal;
+}
+
+.simplePubYear a {
+	padding: 0;
+}
+
+
+.clearflat {
+	clear: both;
+	padding: 0;
+	margin: 0;
+	height: 0px;
+}
+
+.pubSort {
+	cursor: pointer;
+	color: inherit;
+}
+
+.pubSort:hover {
+	color: #333;
+}
+
