Adjusted CSS for simplePubView

--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -200,7 +200,8 @@ a.personPageShowAdditionalRoleFields {
 }
 
 .simplePubEntry {
-	padding: 2px 0;
+	padding: 0 0 4px 0;
+	border-bottom: 1px solid #eee;
 }
 
 .simplePubFirstLine {
@@ -231,6 +232,14 @@ a.personPageShowAdditionalRoleFields {
 
 .simplePubYear a {
 	padding: 0;
+}
+
+.simplePubAuthor {
+	font-size: 13px;
+}
+
+.simplePubPublisher {
+	font-size: 13px;
 }
 
 
