--- a/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/personPage.less
@@ -89,6 +89,11 @@ h1 .personPageFormPlaceholder {
 	cursor: pointer;
 }
 
+.personPageLockedForm {	
+	padding: 0 5px 0 0;
+	cursor: pointer;
+}
+
 .collapsingOverflow {
 	overflow: hidden;	
 }
